# imapsh

./: .gitignore  AUTHORS  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac
m4/: KEEP-ME
src/: Makefile.am  Makefile.in  cli.py  imapsh.py
