#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.66])
AC_INIT([imapsh], [0.0.0PR0], [Tommy.Reynolds@MegaCoder.com])
AM_INIT_AUTOMAKE()
AM_MAINTAINER_MODE
AM_PATH_PYTHON([2.3])

# Checks for programs.

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
